--- a/default/props.conf
+++ b/default/props.conf
@@ -1,3 +1,3 @@
-## Riverbed Steelhead Forwarder Component - default/props.conf
+## Riverbed Steelhead Technology Add-On - default/props.conf
 
 TRANSFORMS-riverbed_src = riverbed_src
