--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -4,6 +4,11 @@
 # While it may not be unique to the Steelhead, it's a pretty good place to start off.
 
 [riverbed_src]
-DEST_KEY = MetaData:Sourcetype
 REGEX = \[([A-Za-z0-9/_\ \.:]+)\.(INFO|NOTICE|WARN|ALERT|ERR|CRIT|EMER)\] (\d+|-)
+DEST_KEY = _MetaData:Sourcetype
 FORMAT = sourcetype::riverbed_steelhead
+
+[riverbed_info]
+REGEX = \.INFO\]
+DEST_KEY = _MetaData:Index
+FORMAT = riverbed_info
