--- a/default/app.conf
+++ b/default/app.conf
@@ -1,4 +1,4 @@
-## Riverbed Steelhead Forwarder Component - default/app.conf
+## Riverbed Steelhead Technology Add-On - default/app.conf
 
 [install]
 state = enabled
@@ -11,5 +11,5 @@ label = Riverbed Steelhead Forwarder Component
 [launcher]
 author = Ian Underwood
 description = Transform to set sourcetype on input forwarders.
-version = 2012.07.27.A
+version = 2012.07.30.B
 
