--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -1,6 +1,6 @@
-## Riverbed Steelhead Forwarder Component - transforms.conf
+## Riverbed Steelhead Technology Add-On - default/transforms.conf
 
-# This expressions looks for Steelhead format logs that fit the format [component.LEVEL] (digits or -).
+# This expressions looks for Steelhead format logs that fit the format.
 # While it may not be unique to the Steelhead, it's a pretty good place to start off.
 
 [riverbed_src]
@@ -8,7 +8,10 @@ REGEX = ([a-z]+)((\[\d+\])|): \[([A-Za-z0-9/_\ \.:]+)\.(INFO|NOTICE|WARN|ALERT|E
 DEST_KEY = MetaData:Sourcetype
 FORMAT = sourcetype::riverbed_steelhead
 
+# This transform exists to send INFO events over to another index.
+# Steelheads in informational mode generate a metric ton of traffic.
+
 [riverbed_info]
-REGEX = \.INFO\]
-DEST_KEY = MetaData:Index
+REGEX = ([a-z]+)((\[\d+\])|): \[([A-Za-z0-9/_\ \.:]+)\.(INFO)\]
+DEST_KEY = _MetaData:Index
 FORMAT = riverbed_info
