--- a/default/app.conf
+++ b/default/app.conf
@@ -6,10 +6,9 @@ is_configured = false
 
 [ui]
 is_visible = 0
-label = Riverbed Steelhead Forwarder Component
+label = Riverbed Steelhead Technology Add-On
 
 [launcher]
 author = Ian Underwood
-description = Transform to set sourcetype on input forwarders.
-version = 2012.07.30.B
-
+description = Transforms to set sourcetype on input forwarders.
+version = 2012.07.31.A
