--- a/default/app.conf
+++ b/default/app.conf
@@ -1,5 +1,8 @@
 ## Riverbed Steelhead Technology Add-On - default/app.conf
 
+[package]
+id = rb_steelhead_ta
+
 [install]
 state = enabled
 is_configured = false
@@ -11,4 +14,4 @@ label = Riverbed Steelhead Technology Add-On
 [launcher]
 author = Ian Underwood
 description = Transforms to set sourcetype on input forwarders.
-version = 2012.07.31.A
+version = 2012.07.31
