--- a/default/transforms.conf
+++ b/default/transforms.conf
@@ -15,3 +15,8 @@ FORMAT = sourcetype::riverbed_steelhead
 REGEX = ([a-z]+)((\[\d+\])|): \[([A-Za-z0-9/_\ \.:]+)\.(INFO)\]
 DEST_KEY = _MetaData:Index
 FORMAT = riverbed_info
+
+[riverbed_notice]
+REGEX = ([a-z]+)((\[\d+\])|): \[([A-Za-z0-9/_\ \.:]+)\.(NOTICE)\]
+DEST_KEY = _MetaData:Index
+FORMAT = riverbed_notice
